[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 250.0
margin_top = 155.0
margin_right = 374.0
margin_bottom = 174.0
text = "Digite seu nome"

[node name="Label2" type="Label" parent="."]
margin_left = 251.0
margin_top = 240.0
margin_right = 373.0
margin_bottom = 255.0
text = "Digite sua idade"

[node name="Label3" type="Label" parent="."]
margin_left = 249.0
margin_top = 321.0
margin_right = 374.0
margin_bottom = 335.0
text = "Digite sua lista"

[node name="nome" type="LineEdit" parent="."]
margin_left = 249.0
margin_top = 186.0
margin_right = 385.0
margin_bottom = 210.0

[node name="idade" type="LineEdit" parent="."]
margin_left = 249.0
margin_top = 270.0
margin_right = 385.0
margin_bottom = 294.0

[node name="conteudo" type="LineEdit" parent="."]
margin_left = 249.0
margin_top = 346.0
margin_right = 385.0
margin_bottom = 370.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 424.0
margin_top = 218.0
margin_right = 703.0
margin_bottom = 329.0

[node name="Resposta1" type="RichTextLabel" parent="ColorRect"]
modulate = Color( 0.0235294, 0.0156863, 0.0156863, 1 )
self_modulate = Color( 0.0313726, 0.0156863, 0.0156863, 1 )
margin_left = 19.0
margin_top = 17.0
margin_right = 262.0
margin_bottom = 95.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 248.0
margin_top = 52.0
margin_right = 726.0
margin_bottom = 128.0

[node name="Resposta2" type="RichTextLabel" parent="ColorRect2"]
modulate = Color( 0.0235294, 0.0156863, 0.0156863, 1 )
self_modulate = Color( 0.0313726, 0.0156863, 0.0156863, 1 )
margin_left = 20.0
margin_top = 13.0
margin_right = 455.0
margin_bottom = 64.0
